* aspell: optimization on spellers to improve speed (save state by buffer)
* guile: fix arguments given to callbacks (separate arguments instead of one
  list with arguments inside), guile >= 2.0 is now required (bug #38350)
* guile: fix crash on calls to callbacks during load of script (bug #38343)
* guile: fix compilation with guile 2.0
* irc: rename option irc.network.lag_disconnect to irc.network.lag_reconnect,
  value is now a number of seconds
* irc: hide passwords in commands or messages sent to nickserv (/msg nickserv)
  with new modifiers "irc_command_auth" and "irc_message_auth", remove option
  irc.look.hide_nickserv_pwd, add option irc.look.nicks_hide_password
  (bug #38346)
* irc: fix display of malformed CTCP (without closing char) (bug #38347)
* irc: unmask smart filtered join if nick speaks in channel some minutes after
  the join, new option irc.look.smart_filter_join_unmask (task #12405)
* irc: fix memory leak in purge of hashtables with joins (it was done only for
  the first server in the list)
* irc: add color in output of /names when result is on server buffer (channel
  not joined) (bug #38070)
* lua: fix crash on stack overflow: call lua_pop() for values returned by lua
  functions (bug #38510)
* perl: simplify code to load scripts
* relay: rename compression "gzip" to "zlib" (compression is zlib, not gzip)
* relay: add message "_nicklist_diff" (differences between old and current
  nicklist)
* relay: add support of multiple servers on same port for irc protocol (the
  client must send the server in the "PASS" command)
* relay: add WebSocket server support (RFC 6455) for irc and weechat protocols,
  new option relay.network.websocket_allowed_origins
* relay: add options "buffers" and "upgrade" for commands sync/desync in weechat
  protocol
* relay: fix commands sync/desync in weechat protocol (bug #38215)
* rmodifier: rename default rmodifier "nickserv" to "command_auth" (with new